--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=Arthur Nikiforov
 sentence=Protothread tasker library for Arduino ESP8266
 paragraph=Protothread tasker library for Arduino ESP8266
 category=Other
-url=https://github.com/r2rus/PTTasker
+url=https://github.com/ar2rus/PTTasker
 architectures=*
